bk_ida/gobmkida/c0/report_dragon
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_dragon/src/engine/dragon.c:2767:22: error: use of undeclared identifier 'unk_4E2577'
v8 = ( const char *)&unk_4E2577; 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_dragon/src/engine/dragon.c:2769:22: error: use of undeclared identifier 'off_4E2573'
v8 = ( const char *)&off_4E2573; 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_dragon/src/engine/dragon.c:2773:22: error: use of undeclared identifier 'unk_4E2577'
v9 = ( const char *)&unk_4E2577; 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_dragon/src/engine/dragon.c:2775:22: error: use of undeclared identifier 'off_4E2573'
v9 = ( const char *)&off_4E2573; 
                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_dragon/src/obj/1/dragon.o] Error 1
